--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+    <h1>Welcome to FriendPost!</h1>
+    <div class="w-full md:w-2/3 mx-auto">
+        {% for message in app.flashes('success') %}
+            <div class="rounded-md p-2 border-green-300 bg-green-50 border dark:border-green-600 dark:bg-green-700 dark:text-white mb-4">{{ message }}</div>
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
