--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -12,13 +12,53 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                darkMode: 'class'
+            }
+        </script>
     </head>
-    <body>
-    <h1>Welcome to FriendPost!</h1>
-    <div class="w-full md:w-2/3 mx-auto">
+     <body class="bg-gray-100 text-gray-800 m-10 dark:bg-gray-800 dark:text-white">
+        <div class="w-full md:w-2/3 mx-auto mb-4 flex justify-between items-center">
+            <div class="text-4xl">
+                <a href="{{ path('app_micro_post') }}">Home</a>
+                {% block bread %}
+
+                {% endblock %}
+            </div>
+
+            <div class="text-right">
+                <div class="text-sm text-gray-500 dark:text-gray-400 flex">
+                    {# {% if is_granted('IS_AUTHENTICATED_FULLY') %} #}
+                    <div>
+                        <a href="{{ path('app_micro_post_add') }}">Add New</a>
+                    </div>
+                    {# <div class="ml-2">
+                        <a href="{{ path('app_settings_profile') }}">Profile Settings</a>
+                    </div>
+                    <div class="ml-2">
+                        <a href="{{ path('app_logout') }}">Logout</a>
+                    </div>
+                    {% else %}
+                    <div>
+                        <a href="{{ path('app_login') }}">Login</a>
+                    </div>
+                    <div class="ml-2">
+                        <a href="{{ path('app_register') }}">Register</a>
+                    </div>
+                    {% endif %} #}
+                </div>
+            </div>
+        </div>
+
+        <div class="w-full md:w-2/3 mx-auto">
         {% for message in app.flashes('success') %}
             <div class="rounded-md p-2 border-green-300 bg-green-50 border dark:border-green-600 dark:bg-green-700 dark:text-white mb-4">{{ message }}</div>
         {% endfor %}
+
         {% block body %}{% endblock %}
+        </div>   
     </body>
 </html>
