--- a/templates/micro_post/edit.html.twig
+++ b/templates/micro_post/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Post{% endblock %}
 
 {% block bread %}
-→ Edit Post
+→ <a href="{{ path('app_micro_post_show', {post: post.id}) }}">Post</a> → Comment
 {% endblock %}
 
 {% block body %}
