Add login and logout

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,15 +37,15 @@
                     </div>
                     {# <div class="ml-2">
                         <a href="{{ path('app_settings_profile') }}">Profile Settings</a>
-                    </div>
+                    </div> #}
                     <div class="ml-2">
                         <a href="{{ path('app_logout') }}">Logout</a>
                     </div>
-                    {% else %}
+                    {# {% else %} #}
                     <div>
                         <a href="{{ path('app_login') }}">Login</a>
                     </div>
-                    <div class="ml-2">
+                    {# <div class="ml-2">
                         <a href="{{ path('app_register') }}">Register</a>
                     </div>
                     {% endif %} #}
