--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,8 +31,7 @@
 
             <div class="text-right">
                 <div class="text-sm text-gray-500 dark:text-gray-400 flex">
-                    {# {% if is_granted('IS_AUTHENTICATED_FULLY') %} #}
-                    {% if app.user %}
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <div>
                         <a href="{{ path('app_micro_post_add') }}">Add New</a>
                     </div>
